2006-09-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_recover, brk_do): (Optimization) Remembered 
	previous recovery result for reuse, cutting off a few repeated
	recoveries at the same position.

	* data/tdict-{std,common}.txt: Added entries.

2006-09-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (best_brk_contest): Adjusted condition so that
	equally scored solution that comes later overrides previous one.
	Longest matching is preferred as a result for such situation.

	* data/tdict-std.txt: Added three more words.

2006-09-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (th_isleadable): RU and LU are also leadable.
	And don't bother checking for Thai digits. They are never passed.

	* src/thbrk/thbrk.c (brk_do): Fixed wrong choosing of nodes with error
	at end of string. Added penalty for such cases, and made sure the
	break position is not marked.

	* data/tdict-{std,science,ict,common}.txt: Added & removed entries.

2006-09-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, +data/tdict-collection.txt, data/tdict-common.txt:
	Split collection sets into tdict-collection.

	* data/Makefile.am, +data/tdict-spell.txt, data/tdict-std.txt:
	Split common typos or variations into tdict-spell.

	* data/tdict-{std,common,ict,district,geo,science}.txt: Moved more 
	words out of tdict-std. Removed more redundant entries. Fixed typos.
	Added more words.

2006-09-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/Makefile.am (dictdatadir): Added variable missed during
	the tdict split.

	* data/tdict-{std,ict,common}.txt: Moved some words out of tdict-std.
	Removed duplicated and redundant entries. Added some more words.

2006-08-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, Makefile.am, src/thbrk/Makefile.am, +data/Makefile.am,
	src/thbrk/tdict.sbm -> data/tdict.sbm,
	src/thbrk/tdict.txt ->